# nobase-agent

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yaml
agent/: Cargo.toml
agent/src/: config.rs  connection.rs  main.rs
agent/src/handlers/: docker.rs  exec.rs  mod.rs  shell.rs
proto/: Cargo.toml
proto/src/: lib.rs  methods.rs  metrics.rs  rpc.rs  stream.rs
src/: config.rs  connection.rs  dispatcher.rs  main.rs  metrics_buffer.rs  updater.rs
src/handlers/: docker.rs  fs.rs  metrics.rs
