[package]
name = "no-base"
version = "0.1.5"
edition = "2021"
license = "MIT"

[[bin]]
name = "no-base"
path = "src/main.rs"

[dependencies]
toml = "0.8"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.32"
nix = { version = "0.29", features = ["process", "signal", "term", "user"] }
dashmap = "6"
libc = "0.2"
http = "1"
hostname = "0.4.2"
bollard = "0.18"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

# Shared dependencies
agent-proto = { path = "proto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
base64 = "0.22"
sha2 = "0.10"