[package]
name = "no-base"
version.workspace = true
edition.workspace = true

[[bin]]
name = "no-base"
path = "src/main.rs"

[dependencies]
agent-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.32"
nix = { version = "0.29", features = ["process", "signal", "term", "user"] }
dashmap = "6"
libc = "0.2"
http = "1"
hostname = "0.4.2"
bollard = "0.18"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
